Bug 496538 - Discover Notifier crashes when checking for rpm-ostree updates
Summary: Discover Notifier crashes when checking for rpm-ostree updates
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: rpm-ostree Backend (other bugs)
Version First Reported In: 6.2.3
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-11-21 13:30 UTC by Martin Polden
Modified: 2026-05-04 15:24 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
coredumpctl output and log (64.60 KB, text/plain)
2024-11-21 13:30 UTC, Martin Polden
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Polden 2024-11-21 13:30:46 UTC
Created attachment 176005 [details]
coredumpctl output and log

On Fedora Kinoite 41 I noticed that Discover Notifier keeps crashing (segfault) when checking for updates. After crashing, the relevant systemd service is not started again and I no longer get notifications for new updates.

STEPS TO REPRODUCE
1. Wait for notifier to check for updates
2. Check service log: journalctl --user -u app-org.kde.discover.notifier@autostart.service
3. Verify that DiscoverNotifier segfaults right after running rpm-ostree-notifier

OBSERVED RESULT
DiscoverNotifier segfaults and update notifications are no longer sent. This correlates with running of rpm-ostree-notifier. One of the stack frames also mentions rpm-ostree-notifier.

EXPECTED RESULT
DiscoverNotifier should not crash.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Fedora Linux 41 (Kinoite 41.20241119.0)
KDE Plasma Version: 6.2.3
KDE Frameworks Version: 6.8.0
Qt Version: 6.8.0

ADDITIONAL INFORMATION
See attached file for output from coredumpctl and log from the systemd service.
Comment 1 TraceyC 2024-11-27 15:17:16 UTC
Searchable backtrace

# output of coredumpctl info 77350
           PID: 73350 (DiscoverNotifie)
           UID: 1000 (martin)
           GID: 1000 (martin)
        Signal: 11 (SEGV)
     Timestamp: Wed 2024-11-20 16:10:04 CET (22h ago)
  Command Line: /usr/libexec/DiscoverNotifier
    Executable: /usr/libexec/DiscoverNotifier
 Control Group: /user.slice/user-1000.slice/user@1000.service/app.slice/app-org.kde.discover.notifier@autostart.service
          Unit: user@1000.service
     User Unit: app-org.kde.discover.notifier@autostart.service
         Slice: user-1000.slice
     Owner UID: 1000 (martin)
       Boot ID: 921a5c15648f4cf4a7384e4763a7baa6
    Machine ID: f301c74e924747f18ea661dd1830d52f
      Hostname: vger
       Storage: /var/lib/systemd/coredump/core.DiscoverNotifie.1000.921a5c15648f4cf4a7384e4763a7baa6.73350.1732115404000000.zst (present)
  Size on Disk: 4.9M
       Package: plasma-discover/6.2.3-2.fc41
      build-id: feb4a9b455fcd4b04e8289214df97b415353a9c8
       Message: Process 73350 (DiscoverNotifie) of user 1000 dumped core.

 Stack trace of thread 73350:
                #0  0x00007facb41ef624 __pthread_kill_implementation (libc.so.6 + 0x72624)
                #1  0x00007facb4196d1e raise (libc.so.6 + 0x19d1e)
                #2  0x00007facb5afb1a2 _ZN6KCrash19defaultCrashHandlerEi (libKF6Crash.so.6 + 0x41a2)
                #3  0x00007facb4196dd0 __restore_rt (libc.so.6 + 0x19dd0)
                #4  0x00007facb4720b5f _ZN7QObject11deleteLaterEv (libQt6Core.so.6 + 0x14cb5f)
                #5  0x00007fac98ce7b45 _ZZN17RpmOstreeNotifier25checkForPendingDeploymentEvENKUliN8QProcess10ExitStatusEE_clEiS1_ (rpm-ostree-notifier.so + 0x6b45)
                #6  0x00007facb472fac1 _Z10doActivateILb0EEvP7QObjectiPPv (libQt6Core.so.6 + 0x15bac1)
                #7  0x00007facb4901d78 _ZN8QProcess8finishedEiNS_10ExitStatusE (libQt6Core.so.6 + 0x32dd78)
                #8  0x00007facb490fe87 _ZN15QProcessPrivate15waitForFinishedERK14QDeadlineTimer (libQt6Core.so.6 + 0x33be87)
                #9  0x00007facb4903af2 _ZN8QProcess15waitForFinishedEi (libQt6Core.so.6 + 0x32faf2)
                #10 0x00007facb461a5b2 _ZN8QProcessD2Ev.cold (libQt6Core.so.6 + 0x465b2)
                #11 0x00007facb4904ba5 _ZN8QProcessD0Ev (libQt6Core.so.6 + 0x330ba5)
                #12 0x00007facb472107a _ZN7QObject5eventEP6QEvent (libQt6Core.so.6 + 0x14d07a)
                #13 0x00007facb5bbe6b8 _ZN19QApplicationPrivate13notify_helperEP7QObjectP6QEvent (libQt6Widgets.so.6 + 0x3d6b8)
                #14 0x00007facb46c7a38 _ZN16QCoreApplication15notifyInternal2EP7QObjectP6QEvent (libQt6Core.so.6 + 0xf3a38)
                #15 0x00007facb46cb765 _ZN23QCoreApplicationPrivate16sendPostedEventsEP7QObjectiP11QThreadData (libQt6Core.so.6 + 0xf7765)
                #16 0x00007facb49be68f _ZL23postEventSourceDispatchP8_GSourcePFiPvES1_ (libQt6Core.so.6 + 0x3ea68f)
                #17 0x00007facb31ec28c g_main_context_dispatch_unlocked.lto_priv.0 (libglib-2.0.so.0 + 0x4028c)
                #18 0x00007facb324c7b8 g_main_context_iterate_unlocked.isra.0 (libglib-2.0.so.0 + 0xa07b8)
                #19 0x00007facb31ed783 g_main_context_iteration (libglib-2.0.so.0 + 0x41783)
                #20 0x00007facb49bdde3 _ZN20QEventDispatcherGlib13processEventsE6QFlagsIN10QEventLoop17ProcessEventsFlagEE (libQt6Core.so.6 + 0x3e9de3)
                #21 0x00007facb46d621b _ZN10QEventLoop4execE6QFlagsINS_17ProcessEventsFlagEE (libQt6Core.so.6 + 0x10221b)
                #22 0x00007facb46d1a2e _ZN16QCoreApplication4execEv (libQt6Core.so.6 + 0xfda2e)
                #23 0x0000563e4f876a3f main (DiscoverNotifier + 0x3a3f)
                #24 0x00007facb4180248 __libc_start_call_main (libc.so.6 + 0x3248)
                #25 0x00007facb418030b __libc_start_main@@GLIBC_2.34 (libc.so.6 + 0x330b)
                #26 0x0000563e4f876b75 _start (DiscoverNotifier + 0x3b75)
Comment 2 Timothée Ravier 2024-11-28 11:54:29 UTC
Can you give us the output of `rpm-ostree status`?
Comment 3 Martin Polden 2024-11-28 18:49:32 UTC
Sure, here you go:

$ rpm-ostree status
State: idle
AutomaticUpdates: stage; rpm-ostreed-automatic.timer: no runs since boot
Deployments:
  fedora:fedora/41/x86_64/kinoite
                  Version: 41.20241119.0 (2024-11-19T00:46:10Z)
               BaseCommit: 067af7ea0c04e0c351f7161ec088e9c000755715658b9efef946080e61f69fe5
                   Commit: be143db19772681a6f89ded1a9a205cb95bf607b0fdd6de3062c2e9974f85ece
             GPGSignature: Valid signature by 466CF2D8B60BC3057AA9453ED0622462E99D6AD1
                     Diff: 2 added
          LayeredPackages: akmod-nvidia cronie darkman distrobox emacs fzf htop iwd
                           libavcodec-freeworld.x86_64 mosh nvidia-vaapi-driver restic
                           ripgrep rpmfusion-free-release rpmfusion-nonfree-release stow
                           syncthing tmux trash-cli xorg-x11-drv-nvidia zsh
                           zsh-syntax-highlighting

● fedora:fedora/41/x86_64/kinoite
                  Version: 41.20241119.0 (2024-11-19T00:46:10Z)
         BootedBaseCommit: 067af7ea0c04e0c351f7161ec088e9c000755715658b9efef946080e61f69fe5
                   Commit: d62e7aa51303111217077263666044624c5729095aa96c75795376a267525f1f
               LiveCommit: be143db19772681a6f89ded1a9a205cb95bf607b0fdd6de3062c2e9974f85ece
                 LiveDiff: 2 added
             GPGSignature: Valid signature by 466CF2D8B60BC3057AA9453ED0622462E99D6AD1
          LayeredPackages: akmod-nvidia cronie emacs fzf htop iwd
                           libavcodec-freeworld.x86_64 mosh nvidia-vaapi-driver restic
                           ripgrep rpmfusion-free-release rpmfusion-nonfree-release stow
                           syncthing tmux trash-cli xorg-x11-drv-nvidia zsh
                           zsh-syntax-highlighting
                 Unlocked: transient

  fedora:fedora/41/x86_64/kinoite
                  Version: 41.20241111.0 (2024-11-11T00:45:55Z)
               BaseCommit: 7dd69f28c21d08454a7c797bad08b8fb82453d233dcc38f308991805b127bc96
                   Commit: 7bd2203c8594960bf65810d0ed5072507f6362958ea990dbae6152d3adc79702
             GPGSignature: Valid signature by 466CF2D8B60BC3057AA9453ED0622462E99D6AD1
          LayeredPackages: akmod-nvidia cronie emacs fzf htop iwd
                           libavcodec-freeworld.x86_64 mosh nvidia-vaapi-driver restic
                           ripgrep rpmfusion-free-release rpmfusion-nonfree-release stow
                           syncthing tmux trash-cli xorg-x11-drv-nvidia zsh
                           zsh-syntax-highlighting

  fedora:fedora/40/x86_64/kinoite
                  Version: 40.20241025.0 (2024-10-25T01:27:43Z)
               BaseCommit: 6aa1b6b1547f8966626b5b1a7938db5a39611e49e1a277acc6520ca63aca1485
                   Commit: 8735eff09c2d5abccb870cc97ec298ba0141c45f62acda7523c74da480f27e67
             GPGSignature: Valid signature by 115DF9AEF857853EE8445D0A0727707EA15B79CC
          LayeredPackages: akmod-nvidia cronie emacs fzf htop iwd
                           libavcodec-freeworld.x86_64 mosh nvidia-vaapi-driver restic
                           ripgrep rpmfusion-free-release rpmfusion-nonfree-release stow
                           syncthing tmux trash-cli xorg-x11-drv-nvidia zsh
                           zsh-syntax-highlighting

AvailableUpdate:
        Version: 41.20241125.0 (2024-11-25T00:41:52Z)
         Commit: 52290c0c7c588cc072035dcb8955791ebcc14cc909c81a93674936e8d17a18ad
   GPGSignature: Valid signature by 466CF2D8B60BC3057AA9453ED0622462E99D6AD1
  SecAdvisories: 1 moderate
           Diff: 76 upgraded, 2 added
Comment 4 Bug Janitor Service 2025-05-26 15:46:51 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/1098
Comment 5 Timothée Ravier 2025-05-28 09:23:11 UTC
Git commit 97a0ae98313681a9fe04c2cefac6c6f2cc811984 by Timothée Ravier.
Committed on 28/05/2025 at 09:21.
Pushed by ravier into branch 'master'.

rpm-ostree: Don't try to parse an empty version

Fixes: https://bugs.kde.org/show_bug.cgi?id=496538

M  +1    -0    libdiscover/backends/RpmOstreeBackend/RpmOstreeNotifier.cpp

https://invent.kde.org/plasma/discover/-/commit/97a0ae98313681a9fe04c2cefac6c6f2cc811984
Comment 6 Timothée Ravier 2025-05-28 13:29:23 UTC
Git commit 38edc00629dd23279b778236ee5efd67483f25bf by Timothée Ravier.
Committed on 28/05/2025 at 09:24.
Pushed by ravier into branch 'Plasma/6.4'.

rpm-ostree: Don't try to parse an empty version

Fixes: https://bugs.kde.org/show_bug.cgi?id=496538
(cherry picked from commit 97a0ae98313681a9fe04c2cefac6c6f2cc811984)

M  +1    -0    libdiscover/backends/RpmOstreeBackend/RpmOstreeNotifier.cpp

https://invent.kde.org/plasma/discover/-/commit/38edc00629dd23279b778236ee5efd67483f25bf