rpm-ostree: Don't try to parse an empty version

Fixes: https://bugs.kde.org/show_bug.cgi?id=496538

BUG: 496538